--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <a href="#QueHacemos">Que hacemos</a>
         <a href="#oportunidad">Como te ayudamos</a>
         <a href="#contacto">Contactanos</a>
-        <a href="https://codepen.io/jo_Geek/" target="_blank"><i class="bi bi-instagram"></i></a>
-        <a href="https://jsfiddle.net/user/jo_Geek/" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="https://codepen.io/jo_Geek/" target="_blank"><i class="bi bi-tiktok"></i></a>
+        <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="#" target="_blank"><i class="bi bi-tiktok"></i></a>
       </div>
     </div>
   </header>
