--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="./css/content2.css" />
   <link rel="stylesheet" href="./css/contacto.css" />
   <link rel="stylesheet" href="./css/footer.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
@@ -19,27 +21,36 @@
 
 <body>
   <header>
-    <div class="nav">
-      <input type="checkbox" id="nav-check" />
-      <div class="nav-header">
-        <div class="nav-title">
-          <img class="img-logo" src="./img/Logo.svg" alt="logo" />
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
+          aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#"><img class="img-logo" src="./img/Logo.svg" alt=""></a>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#QueHacemos">Qué hacemos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#oportunidad">Cómo te ayudamos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#contacto">Contactanos</a>
+            </li>
+          </ul>
+          <div class="d-flex mx-5 gap-5">
+            <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a href="#" target="_blank"><i class="bi bi-tiktok"></i></a>
+          </div>
         </div>
       </div>
-    
-
-      <div class="nav-links">
-        <a href="#QueHacemos">Que hacemos</a>
-        <a href="#oportunidad">Como te ayudamos</a>
-        <a href="#contacto">Contactanos</a>
-        <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
-        <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="#" target="_blank"><i class="bi bi-tiktok"></i></a>
-      </div>
-    </div>
+    </nav>
   </header>
   <main>
-    <div class="container">
+    <div class="main-container">
       <div class="banner">
         <div>
           <div class="frases">
@@ -53,8 +64,8 @@
             </p>
           </div>
 
-          <button class="btn btn-yellow">Adquirir</button>
-          <button class="btn btn-white">Saber más</button>
+          <button class="btn-container btn-yellow">Adquirir</button>
+          <button class="btn-container btn-white">Saber más</button>
         </div>
         <div class="img-banner-1">
           <img class="img-1" src="img/mujer-empresaria.svg" alt="IMG" />
@@ -69,48 +80,69 @@
 
           </div>
         </div>
-        <div class="card-container">
-          <div class="card">
-            <div class="card-img">
-              <img src="./img/Target.svg" alt="img">
-            </div>
-            <div class="card-body">
-              <div class="card-title">
-                Objectivos
-              </div>
-              <div class="card-descripcion">
-                Te estaré guiando para que obtengas esos objetivos que buscas.
-              </div>
-            </div>
+        <div class="">
+          <div class="">
+              <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner" >
+                      <div class="carousel-item active">
+                          <div class="col-md-3">
+                              <div class="card-objetivo">
+                                  <div class="card-img-objetivo">
+                                      <img src="./img/Target.svg" alt="img">
+                                  </div>
+                                  <div class="card-cuerpo">
+                                      <div class="card-title">
+                                          Objectivos
+                                      </div>
+                                      <div class="card-descripcion">
+                                          Te estaré guiando para que obtengas esos objetivos que buscas.
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="carousel-item">
+                          <div class="col-md-3">
+                              <div class="card-objetivo">
+                                  <div class="coin">
+                                      <img src="./img/EthereumCoin.svg" alt="img">
+                                  </div>
+                                  <div class="card-cuerpo">
+                                      <div class="card-title">
+                                          Finanzas
+                                      </div>
+                                      <div class="card-descripcion">
+                                        Obtendrás explicación  como manejar los pasivos, activos y capital de tu empresas                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="carousel-item">
+                          <div class="col-md-3">
+                              <div class="card-objetivo">
+                                  <div class="card-img-objetivo">
+                                      <img src="./img/CreditCard.svg" alt="img">
+                                  </div>
+                                  <div class="card-cuerpo">
+                                      <div class="card-title">
+                                          Creditos
+                                      </div>
+                                      <div class="card-descripcion">
+                                        Estaré asesorando y ayudarte con la búsqueda de créditos para incrementar tu capital                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <a class="carousel-control-prev bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  </a>
+                  <a class="carousel-control-next bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  </a>
+                </div>
           </div>
-          <div class="card">
-            <div class=" coin">
-              <img src="./img/EthereumCoin.svg" alt="img">
-            </div>
-            <div class="card-body">
-              <div class="card-title">
-                Objectivos
-              </div>
-              <div class="card-descripcion">
-                Te estaré guiando para que obtengas esos objetivos que buscas.
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-img ">
-              <img src="./img/CreditCard.svg" alt="img">
-            </div>
-            <div class="card-body">
-              <div class="card-title">
-                Objectivos
-              </div>
-              <div class="card-descripcion">
-                Te estaré guiando para que obtengas esos objetivos que buscas.
-              </div>
-            </div>
-          </div>
-
-        </div>
+      </div>
         <div id="oportunidad" class="content-oportunidad">
           <div class="oportunidad">
             <p class="caroline-text">#CAROLINESADA</p>
@@ -118,7 +150,7 @@
                 <p class="caroline-descripcion">Buscamos mejorar tu habilidades financieras , donde tu emprendimiento
                   crezca de forma exponencial y se convierta en una empresa solida, dando los mejores consejos, análisis
                   sobre tu negocio.</p>
-                <button class="btn btn-yellow">Adquirir</button>
+                <button class="btn-container btn-yellow">Adquirir</button>
           </div>
           <div class="img-oportunidad">
             <img class="img-banner2" src="./img/img-banner2.svg" alt="img">
@@ -141,15 +173,14 @@
           <div class="formulario">
             <form action="">
               <label for="Nombre">Nombre</label><br>
-              <input class="input-contacto" type="text" name="" id="" placeholder="  Ingrese nombre"><br>
+              <input class="input-contacto" type="text" name="" id="" required placeholder="  Ingrese nombre"><br>
               <label for="">Email</label>
               <br />
-              <input class="input-contacto" type="email" name="" id="" placeholder="  contacto@gmail.com"><br>
+              <input class="input-contacto" type="email" name="" id="" placeholder="  contacto@gmail.com" required><br>
               <label for="">Teléfono</label><br>
-              <input class="input-contacto" type="text" name="" id="" placeholder="  0424-1234567">
+              <input class="input-contacto" type="text" name="" id="" placeholder="  0424-1234567" required>
               <div class="box-button">
-                <button class="btn btn-yellow" type="submit">Enviar!</button>
-
+                <button class="btn-container btn-yellow" type="submit">Enviar!</button>
               </div>
             </form>
           </div>
@@ -175,7 +206,7 @@
         <label for="">Reciba Novedades</label>
         <div>
           <input type="email" name="" id="" placeholder="  contacto.com">
-        <button class="btn-footer" type="submit">Inscribirse</button>
+          <button class="btn-footer" type="submit">Inscribirse</button>
         </div>
       </form>
     </div>
@@ -183,7 +214,24 @@
       <p>Caroline Sada-2023</p>
     </div>
   </footer>
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+    <script>let items = document.querySelectorAll('.carousel .carousel-item')
+
+      items.forEach((el) => {
+          const minPerSlide = 3
+          let next = el.nextElementSibling
+          for (var i = 1; i < minPerSlide; i++) {
+              if (!next) {
+                  // wrap carousel by using first child
+                  next = items[0]
+              }
+              let cloneChild = next.cloneNode(true)
+              el.appendChild(cloneChild.children[0])
+              next = next.nextElementSibling
+          }
+      })</script>
 </body>
 
 </html>
